<resources>
    <string name="app_name">MyFavMember</string>
    <string name="action_settings">Settings</string>
    <string name="title"><![CDATA[HiGH&LOWチーム一覧]]></string>
    <string name="team">チーム名：</string>
    <string name="name">リーダー：</string>
    <string name="actor">俳優：</string>
    <string name="music">テーマ曲：</string>
    <string name="detail">詳細：</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>
</resources>
